# memorizer

./: README.md  pyproject.toml
.github/workflows/: integrate.yml
data/: 10.json  11.json  12.json  13.json  14.json  15.json  eigth.json  fifth.json  fourth.json  ninth.json  second.json  seventh.json  sixth.json  test.json  third.json  tv.json
memorizer/: __init__.py  helper.py
tests/: helper_test.py  unit_test.py  unt_test.py
tests/data/: 1.json  test.json
