[tool.poetry]
name = "memorizer"
version = "0.1.0"
description = "Word memorization console app"
authors = ["amitkummer <amit.kummer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
